ags (3.13.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsTimeStretchBufferDialog
	* implemented ags_time_stretch_util.c
	* implemented getter functions in ags_midi_util.c
	* implemented ags-fx-low-pass
	* implemented ags-fx-high-pass
	* refactored ags-fx-volume to use new accelerated AgsVolumeUtil functions
	* refactored ags-fx-envelope to use new accelerated AgsEnvelopeUtil functions
	* updated developer manual additional content and listings

ags (3.12.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed conditional build of VST3 in ags_fx_factory.c

ags (3.12.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsAudioToolbox RW open and write file
	* improved developer docs, additional information on threading

ags (3.12.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* updated README windows build
	* improved ags_xorg_application_context.c to conditional build sysname of windows
	* fixed missing include of ags/config.h

ags (3.12.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags_animation_window_init() to obtain stride from format
	* fixed ags_audio_toolbox_open() to set samplerate and integer format
	* fixed ags_audio_toolbox_read() to clear buffer

ags (3.12.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed SIGSEGV with AgsRampAccelerationDialog
	* fixed SIGSEGV with AgsSelectAccelerationDialog
	* fixed missing paste flags implementation in AgsCompositeToolbar callbacks
	* fixed missing channel selector control implementation in AgsCompositeToolbar callbacks

ags (3.12.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved restore of AgsPiano shift while AgsCompositeEditor::machine-changed()
	* improved AgsAutomationEdit draw all automation if not focused
	* minor improvements

ags (3.12.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]